Updated format of posts.json

--- a/my-portfolio/package.json
+++ b/my-portfolio/package.json
@@ -44,5 +44,5 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "https://github.com/pauldoh21/pauldoh21.github.io"
+  "homepage": "."
 }
