Add environment specification for GitHub Pages

--- a/.github/workflows/publish_ics.yml
+++ b/.github/workflows/publish_ics.yml
@@ -12,6 +12,7 @@ permissions:
 jobs:
   build-and-publish:
     runs-on: ubuntu-latest
+    environment: github-pages
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
